--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-        background-color: blueviolet:
+        background-color: blueviolet;
         
 }
 main{
@@ -14,5 +14,5 @@ main{
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.0.473);
-    
+
 }
