--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,7 +5,14 @@
 }
 
 body{
-        background-color: rgb(248, 248, 248);
+        background-image: url(https://www.notebookcheck.info/fileadmin/_processed_/b/4/csm_GTA-VI_420f7d85ff.png);
+
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        
+        background-color: #333;
         
 }
 main{
@@ -13,6 +20,7 @@ main{
     width: 500px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.0.473);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473); 
+    border-radius: 8px; 
 
 }
