--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,3 +24,13 @@ main{
     border-radius: 8px; 
 
 }
+img{
+    img {
+    max-width: 100%;
+    height: auto; 
+    display: block;
+    margin: 20px auto;
+    border-radius: 5px; 
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+}
