--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,6 +3,14 @@
     font-size: 16px;
 
 }
+h1 {
+   text-align: center;
+   font-size: 3.5em;
+   color: #000000;
+   text-align: center;
+   margin-bottom: 20px;
+
+}
 
 body{
         background-image: url(https://www.notebookcheck.info/fileadmin/_processed_/b/4/csm_GTA-VI_420f7d85ff.png);
