--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,6 +10,12 @@ h1 {
    text-align: center;
    margin-bottom: 20px;
 
+    text-shadow: 
+        1px 1px 0 #FFF,
+       -1px 1px 0 #FFF,    
+        1px -1px 0 #FFF,   
+       -1px -1px 0 #FFF; 
+
 }
 
 body{
