--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,9 +45,11 @@ main{
     background-color: rgba(0, 0, 0, 0.7);
     width: 500px;
     margin: auto;
-    padding: 07px;
+    padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473); 
     border-radius: 8px; 
+
+    text-align: left;
 
 }
 img{
